# Its_my_homework

./: .flake8  README.md  pyproject.toml  pyvenv.cfg
Scripts/: activate  activate.bat  activate.fish  activate.nu  activate.ps1  activate_this.py
src/: decorators.py  generators.py  masks.py  mylog.txt  processing.py  widget.py
tests/: masks_tests.py  mylog.txt  test_generators.py  test_log.txt  test_masks.py  test_processing.py  test_widget.py  widget_test.py
